[gd_scene load_steps=3 format=3 uid="uid://bc625hvy5e2di"]

[ext_resource type="Script" path="res://root.gd" id="1_ctm44"]
[ext_resource type="Script" path="res://motion_capture_task.gd" id="2_lhxsw"]

[node name="Root" type="Node3D"]
script = ExtResource("1_ctm44")

[node name="OperatorView" type="Window" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(300, 300)
transient = true
always_on_top = true
content_scale_size = Vector2i(100, 100)
content_scale_mode = 1
content_scale_aspect = 1

[node name="InitErrorTimer" type="Timer" parent="."]
one_shot = true

[node name="motion_capture_task" type="Node3D" parent="."]
script = ExtResource("2_lhxsw")

[node name="Timer" type="Timer" parent="motion_capture_task"]
one_shot = true

[node name="SuccessPlayer" type="AudioStreamPlayer" parent="motion_capture_task"]
volume_db = 12.787

[node name="FailurePlayer" type="AudioStreamPlayer" parent="motion_capture_task"]

[node name="TextureRect" type="TextureRect" parent="motion_capture_task"]
visibility_layer = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="StartPlayer" type="AudioStreamPlayer" parent="motion_capture_task"]

[node name="Label" type="Label" parent="motion_capture_task"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_font_sizes/font_size = 200
text = "Success"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InjectTimer" type="Timer" parent="motion_capture_task"]
wait_time = 0.1
one_shot = true

[node name="OperatorLabel" type="Label" parent="."]
visibility_layer = 2
offset_right = 112.0
offset_bottom = 23.0
text = "Operator View"
